resolve:load balance

--- a/account-service/src/main/resources/application-dev.properties
+++ b/account-service/src/main/resources/application-dev.properties
@@ -13,6 +13,10 @@
 #spring.jpa.show-sql= true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 #eureka
+
+server.port=8000
+spring.application.name=account-service
+
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 eureka.instance.lease-renewal-interval-in-seconds=30 
 eureka.instance.lease-expiration-duration-in-seconds=90
