--- a/account-service/src/main/resources/application-prod.properties
+++ b/account-service/src/main/resources/application-prod.properties
@@ -1,20 +1,38 @@
 
-eureka.client.service-url.default-zone= ${EUREKA_URL}
+server.port=${PORT:8000}
+#
+spring.application.name=account-service
+#
+##eureka.client.serviceUrl.defaultZone=${EUREKA_URL}
+#eureka.client.serviceUrl.defaultZone=https://radiant-fortress-07436.herokuapp.com/eureka/
+#
+#eureka.instance.lease-renewal-interval-in-seconds=30
+#
+#eureka.instance.lease-expiration-duration-in-seconds=90
+#
+##eureka.instance.hostname=${DOMAIN_NAME}
+##
+#eureka.instance.nonSecurePort=80
+#
+#
+##load balancing
+#ribbon.eureka.enabled=true
+#
+#spring.profiles=heroku
+#
+#
+##security
+#security.user.password=${USER_PASSWORD:Linh@12345}
 
-eureka.instance.lease-renewal-interval-in-seconds=30
+eureka.client.service-url.defaultZone=https://radiant-fortress-07436.herokuapp.com/eureka/
+
+eureka.instance.lease-renewal-interval-in-seconds=30 
 
 eureka.instance.lease-expiration-duration-in-seconds=90
 
-eureka.instance.hostname=${DOMAIN_NAME}
-
-eureka.instance.nonSecurePort=80
-
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
 
 #load balancing
 ribbon.eureka.enabled=true
-
-spring.profiles=heroku
-
-
-#security
-security.user.password=${USER_PASSWORD:password}
