--- a/gateway-service/src/main/resources/application-dev.properties
+++ b/gateway-service/src/main/resources/application-dev.properties
@@ -11,13 +11,16 @@ zuul.routes.account.serviceId=account-service
 
 #eureka
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-eureka.instance.lease-renewal-interval-in-seconds=30
-eureka.instance.lease-expiration-duration-in-seconds=90
+#eureka.instance.lease-renewal-interval-in-seconds=30
+#eureka.instance.lease-expiration-duration-in-seconds=90
+
+#retry logic for first request
+zuul.retryable=true
 
 #load balancing
 ribbon.eureka.enabled=true
 
 #timeout
-#zuul.ribbon.eager-load.enabled=true
+zuul.ribbon.eager-load.enabled=true
 #ribbon.ReadTimeout=60000
 #ribbon.ConnectTimeout=10000
