--- a/discovery-service/src/main/resources/application-prod.properties
+++ b/discovery-service/src/main/resources/application-prod.properties
@@ -1,12 +1,17 @@
-
+server.port=${PORT:8761}
 
 eureka.instance.hostname=localhost
-eureka.client.registerWithEureka=false
+
+eureka.client.registerWithEureka=true
+
 eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+
+#eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+
 eureka.password=${EUREKA_USER_PASSWORD:password}
-security.user.password=${eureka.password}
-server.port=${PORT:5000}
+
+security.user.password=${eureka.password} 
 
 eureka.renewalPercentThreshold=0.85
+
 eureka.server.enableSelfPreservation=false
