--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -5,3 +5,4 @@ USER spring:spring
 ARG JAR_FILE=/build/libs/*.jar
 COPY ${JAR_FILE} gateway-service-0.0.1-SNAPSHOT.jar
 ENTRYPOINT ["java","-jar","/gateway-service-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "/gateway-service-0.0.1-SNAPSHOT.jar", "--server.port=${PORT:8765}"]
