--- a/account-service/src/main/resources/application-dev.properties
+++ b/account-service/src/main/resources/application-dev.properties
@@ -1,4 +1,3 @@
-
 #spring.datasource.url=jdbc:mysql://localhost/micro_user?createDatabaseIfNotExist=true&serverTimezone=UTC
 #
 #spring.datasource.username=root
@@ -13,12 +12,31 @@
 #spring.jpa.show-sql= true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 #eureka
-
 server.port=8000
 spring.application.name=account-service
-
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 eureka.instance.lease-renewal-interval-in-seconds=30 
 eureka.instance.lease-expiration-duration-in-seconds=90
 #load balancing
 ribbon.eureka.enabled=true
+#data
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5433/music_authentication?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=Linh@12345
+spring.datasource.platform=postgres
+#hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#2bernate
+spring.jackson.serialization.fail-on-empty-beans=false
+#social login mode
+#if true -> auto generate account base info
+#if false -> redirect to registration with base info
+social.auto-sign-up=true
+#google login
+spring.security.oauth2.client.registration.google.clientId=802744143495-khnrqg5uhqp2t03s57g1n7h831ak1n5k.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.clientSecret=9xB4bMv0nRwVqaZpHvxJuI6W
+spring.security.oauth2.client.registration.google.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.google.scope=[email, profile]
