--- a/gateway-service/src/main/resources/application-dev.properties
+++ b/gateway-service/src/main/resources/application-dev.properties
@@ -1,26 +1,26 @@
 server.port=8765
-spring.application.name=gateway-service
-
 zuul.ignored-headers=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 zuul.sensitiveHeaders=Cookie,Set-Cookie
-
 zuul.prefix=/api
-
 zuul.routes.account.path=/account/**
 zuul.routes.account.serviceId=account-service
-
 #eureka
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 #eureka.instance.lease-renewal-interval-in-seconds=30
 #eureka.instance.lease-expiration-duration-in-seconds=90
-
 #retry logic for first request
 zuul.retryable=true
-
 #load balancing
 ribbon.eureka.enabled=true
-
 #timeout
 zuul.ribbon.eager-load.enabled=true
 #ribbon.ReadTimeout=60000
 #ribbon.ConnectTimeout=10000
+
+#security
+spring.oauth2.client.client-id=acme
+spring.oauth2.client.client-secret=acmesecret
+spring.oauth2.client.access-token-uri=http://localhost:8100/oauth/token
+spring.oauth2.client.user-authorization-uri=http://localhost:8100/oauth/authorize
+spring.oauth2.client.grant-type=implicit
+spring.oauth2.resource=user-info-uri: http://localhost:8100/me
