create:auth server

--- a/gateway-service/src/main/resources/application-dev.properties
+++ b/gateway-service/src/main/resources/application-dev.properties
@@ -2,8 +2,17 @@ server.port=8765
 zuul.ignored-headers=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 zuul.prefix=/api
+
+
 zuul.routes.account.path=/account/**
 zuul.routes.account.serviceId=account-service
+
+zuul.routes.auth-server.path=/auth/**
+zuul.routes.auth-server.service-id=auth-server
+
+zuul.routes.core.path=/core/**
+zuul.routes.core.serviceId=core-service
+
 #eureka
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 #eureka.instance.lease-renewal-interval-in-seconds=30
