--- a/account-service/src/main/resources/application-dev.properties
+++ b/account-service/src/main/resources/application-dev.properties
@@ -35,8 +35,27 @@ spring.jackson.serialization.fail-on-empty-beans=false
 #if true -> auto generate account base info
 #if false -> redirect to registration with base info
 social.auto-sign-up=true
+
+#app
+app.auth.tokenExpirationMsec=864000000
+app.auth.tokenSecret=926D96C90030DD58429D2751AC1BDBBC
+
 #google login
+spring.security.oauth2.client.provider.facebook.authorizationUri=https://www.facebook.com/v3.0/dialog/oauth
+spring.security.oauth2.client.provider.facebook.tokenUri=https://graph.facebook.com/v3.0/oauth/access_token
+spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
+spring.security.oauth2.client.registration.facebook.clientId=121189305185277
+spring.security.oauth2.client.registration.facebook.clientSecret=42ffe5aa7379e8326387e0fe16f34132
+spring.security.oauth2.client.registration.facebook.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.facebook.scope=[email, public_profile]
+
+spring.security.oauth2.client.registration.github.clientId=d3e47fc2ddd966fa4352
+spring.security.oauth2.client.registration.github.clientSecret=3bc0f6b8332f93076354c2a5bada2f5a05aea60d
+spring.security.oauth2.client.registration.github.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.github.scope=[user:email, read:user]
+
 spring.security.oauth2.client.registration.google.clientId=802744143495-khnrqg5uhqp2t03s57g1n7h831ak1n5k.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret=9xB4bMv0nRwVqaZpHvxJuI6W
 spring.security.oauth2.client.registration.google.redirectUri={baseUrl}/oauth2/callback/{registrationId}
 spring.security.oauth2.client.registration.google.scope=[email, profile]
+
