add:account-verify

--- a/auth-service/src/main/resources/application-dev.properties
+++ b/auth-service/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.hibernate.ddl-auto=update
 hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 
 social.auto-sign-up=true
@@ -28,13 +28,13 @@ spring.security.oauth2.client.provider.facebook.authorizationUri=https://www.fac
 spring.security.oauth2.client.provider.facebook.tokenUri=https://graph.facebook.com/v3.0/oauth/access_token
 spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
 
-spring.security.oauth2.client.registration.facebook.clientId=121189305185277
-spring.security.oauth2.client.registration.facebook.clientSecret=42ffe5aa7379e8326387e0fe16f34132
+spring.security.oauth2.client.registration.facebook.clientId=861092277801322
+spring.security.oauth2.client.registration.facebook.clientSecret=b7fcbeb5d2fc3bbb74fc6bff00532893
 spring.security.oauth2.client.registration.facebook.redirectUri={baseUrl}/oauth2/callback/{registrationId}
-spring.security.oauth2.client.registration.facebook.scope=[email, public_profile]
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
 
 spring.security.oauth2.client.registration.github.clientId=d3e47fc2ddd966fa4352
-spring.security.oauth2.client.registration.github.clientSecret=3bc0f6b8332f93076354c2a5bada2f5a05aea60d
+spring.security.oauth2.client.registration.github.clientSecret=829cd5235f5f2f77a7afe3ffde5b70e1
 spring.security.oauth2.client.registration.github.redirectUri={baseUrl}/oauth2/callback/{registrationId}
 spring.security.oauth2.client.registration.github.scope=[user:email, read:user]
 
@@ -42,3 +42,19 @@ spring.security.oauth2.client.registration.google.clientId=802744143495-khnrqg5u
 spring.security.oauth2.client.registration.google.clientSecret=9xB4bMv0nRwVqaZpHvxJuI6W
 spring.security.oauth2.client.registration.google.redirectUri={baseUrl}/oauth2/callback/{registrationId}
 spring.security.oauth2.client.registration.google.scope=email,profile
+
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=linhdeptrai1029ii@gmail.com
+spring.mail.password=Mypassword@12345
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
+
