--- a/auth-service/src/main/resources/application-prod.properties
+++ b/auth-service/src/main/resources/application-prod.properties
@@ -1,32 +1,51 @@
-server.port=${PORT:8000}
-#
-spring.application.name=account-service
-#
-##eureka.client.serviceUrl.defaultZone=${EUREKA_URL}
-#eureka.client.serviceUrl.defaultZone=https://radiant-fortress-07436.herokuapp.com/eureka/
-#
-#eureka.instance.lease-renewal-interval-in-seconds=30
-#
-#eureka.instance.lease-expiration-duration-in-seconds=90
-#
-##eureka.instance.hostname=${DOMAIN_NAME}
-##
-#eureka.instance.nonSecurePort=80
-#
-#
-##load balancing
-#ribbon.eureka.enabled=true
-#
-#spring.profiles=heroku
-#
-#
-##security
-#security.user.password=${USER_PASSWORD:Linh@12345}
+
 eureka.client.service-url.defaultZone=https://radiant-fortress-07436.herokuapp.com/eureka/
 eureka.instance.lease-renewal-interval-in-seconds=30 
 eureka.instance.lease-expiration-duration-in-seconds=90
+
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+
+#load balancing
 ribbon.ReadTimeout=60000
 ribbon.ConnectTimeout=60000
-#load balancing
 ribbon.eureka.enabled=true
+
+#app config
+app.auth.tokenExpirationMsec=864000000
+app.auth.tokenSecret=${TOKEN_SECRET}
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=Linh@12345
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/music_authentication?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jpa.hibernate.ddl-auto=update
+hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+
+
+social.auto-sign-up=true
+
+app.oauth2.authorized-redirect-uris=https://obscure-atoll-68510.herokuapp.com/
+
+spring.security.oauth2.client.provider.facebook.authorizationUri=https://www.facebook.com/v3.0/dialog/oauth
+spring.security.oauth2.client.provider.facebook.tokenUri=https://graph.facebook.com/v3.0/oauth/access_token
+spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
+
+spring.security.oauth2.client.registration.facebook.clientId=121189305185277
+spring.security.oauth2.client.registration.facebook.clientSecret=829cd5235f5f2f77a7afe3ffde5b70e1
+spring.security.oauth2.client.registration.facebook.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.facebook.scope=[email, public_profile]
+
+spring.security.oauth2.client.registration.github.clientId=d3e47fc2ddd966fa4352
+spring.security.oauth2.client.registration.github.clientSecret=3bc0f6b8332f93076354c2a5bada2f5a05aea60d
+spring.security.oauth2.client.registration.github.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.github.scope=[user:email, read:user]
+
+spring.security.oauth2.client.registration.google.clientId=802744143495-khnrqg5uhqp2t03s57g1n7h831ak1n5k.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.clientSecret=9xB4bMv0nRwVqaZpHvxJuI6W
+spring.security.oauth2.client.registration.google.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.google.scope=email,profile
