--- a/gateway-service/src/main/resources/application-dev.properties
+++ b/gateway-service/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ zuul.routes.account.path=/account/**
 zuul.routes.account.serviceId=account-service
 
 zuul.routes.auth-server.path=/auth/**
-zuul.routes.auth-server.service-id=auth-server
+zuul.routes.auth-server.service-id=auth-service
 
 zuul.routes.core.path=/core/**
 zuul.routes.core.serviceId=core-service
