--- a/gateway-service/src/main/resources/application-prod.properties
+++ b/gateway-service/src/main/resources/application-prod.properties
@@ -14,7 +14,7 @@ ribbon.SocketTimeout=120000
 ribbon.maxAutoRetries=1
 #hytrix
 hystrix.command.default.execution.isolationthread.timeoutInMilliseconds=10000
-zuul.routes.account-service.path=/account/**
+zuul.routes.account-service.path=/auth/**
 zuul.routes.account-service.url=https://obscure-atoll-68510.herokuapp.com
 zuul.routes.get.path=/get/**
 zuul.routes.get.url=http://httpbin.org/get
