--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
+    
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.4.4'
 
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-core
     implementation group: 'org.springframework.security', name: 'spring-security-oauth2-core', version: '5.4.5'
