--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -21,12 +21,19 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
 
+//    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client
+//    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.4.5'
+//
+//    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
+//    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.4.5'
+
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-zuul
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-zuul', version: '2.2.7.RELEASE'
 
     compileOnly 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
