--- a/storage-service/src/main/resources/application.properties
+++ b/storage-service/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+server.port=7071
+
+spring.application.name=storage-service
+
+
+cloudinary.cloud_name=linkdoan
+cloudinary.api_key=517643836534593
+cloudinary.api_secret=OAfm6h9YmtRm04uhziGLx6J-QW8
+
+spring.http.multipart.max-file-size=50000000KB
+spring.http.multipart.max-request-size=50000000KB
+
+multipart.max-file-size=10MB
+spring.servlet.multipart.max-file-size=200MB
+
+spring.profiles.active=dev
